{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 283,
  "lineage": "904a3c59-5495-9aa3-5350-8bde55b34721",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0aa1af335910bf720",
            "public_dns": "ec2-13-234-201-227.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.201.227",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:229854522243:instance/i-07f33460c0cd81cc1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f33460c0cd81cc1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey111222",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c89d6069a2b5bae8",
            "private_dns": "ip-192-168-1-169.ap-south-1.compute.internal",
            "private_ip": "192.168.1.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-026fcbf4633852fc1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-067813e884bcd081c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ab37ae7f3935701",
            "tags": {
              "Name": "MySql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-067813e884bcd081c"
            ]
          },
          "dependencies": [
            "aws_security_group.mysql_security",
            "aws_subnet.alphanet2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "website",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3d500b591de7dd9",
            "arn": "arn:aws:ec2:ap-south-1:229854522243:instance/i-04de5a7fb2fa4d1c1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04de5a7fb2fa4d1c1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey111222",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a53f076a4f42298a",
            "private_dns": "ip-192-168-0-16.ap-south-1.compute.internal",
            "private_ip": "192.168.0.16",
            "public_dns": "ec2-13-233-40-139.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.40.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04b4f08d2cd7fd005",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-094fb67b0c8026ee6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085c05014877a402b",
            "tags": {
              "Name": "WordpressWebsite"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-094fb67b0c8026ee6"
            ]
          },
          "dependencies": [
            "aws_instance.mysql",
            "aws_internet_gateway.public_gateway",
            "aws_security_group.mysql_security",
            "aws_security_group.wordpress_security",
            "aws_subnet.alphanet1",
            "aws_subnet.alphanet2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:229854522243:internet-gateway/igw-0a7ee02e2351eff40",
            "id": "igw-0a7ee02e2351eff40",
            "owner_id": "229854522243",
            "tags": {
              "Name": "mygateway1"
            },
            "vpc_id": "vpc-0a813ce9b13b8716d"
          },
          "dependencies": [
            "aws_subnet.alphanet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa1af335910bf720",
            "id": "nat-0385eabe0732bbb16",
            "network_interface_id": "eni-026f0de53b997d70c",
            "private_ip": "192.168.0.55",
            "public_ip": "13.234.201.227",
            "subnet_id": "subnet-085c05014877a402b",
            "tags": {
              "name": "MyNAT"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.public_gateway",
            "aws_subnet.alphanet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c4520ba0c724d00a",
            "owner_id": "229854522243",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7ee02e2351eff40",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myroutingtale1"
            },
            "vpc_id": "vpc-0a813ce9b13b8716d"
          },
          "dependencies": [
            "aws_internet_gateway.public_gateway",
            "aws_subnet.alphanet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetableprivate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0109145346a00790e",
            "owner_id": "229854522243",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0385eabe0732bbb16",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myroutingtale2"
            },
            "vpc_id": "vpc-0a813ce9b13b8716d"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.public_gateway",
            "aws_nat_gateway.gw",
            "aws_subnet.alphanet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08db02e8d5d7412c6",
            "route_table_id": "rtb-0c4520ba0c724d00a",
            "subnet_id": "subnet-085c05014877a402b"
          },
          "dependencies": [
            "aws_internet_gateway.public_gateway",
            "aws_route_table.routetable",
            "aws_subnet.alphanet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associateprivate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e8fcac468c1c67b",
            "route_table_id": "rtb-0109145346a00790e",
            "subnet_id": "subnet-05ab37ae7f3935701"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.public_gateway",
            "aws_nat_gateway.gw",
            "aws_route_table.routetable",
            "aws_route_table.routetableprivate",
            "aws_subnet.alphanet1",
            "aws_subnet.alphanet2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_security",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:229854522243:security-group/sg-067813e884bcd081c",
            "description": "MySql security group is in private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067813e884bcd081c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mysql_security",
            "name_prefix": null,
            "owner_id": "229854522243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a813ce9b13b8716d"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_security",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:229854522243:security-group/sg-094fb67b0c8026ee6",
            "description": "Web-server httpd port is allowed to connect",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094fb67b0c8026ee6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "wordpress_security",
            "name_prefix": null,
            "owner_id": "229854522243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a813ce9b13b8716d"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alphanet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:229854522243:subnet/subnet-085c05014877a402b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-085c05014877a402b",
            "map_public_ip_on_launch": true,
            "owner_id": "229854522243",
            "tags": {
              "Name": "wordpress"
            },
            "vpc_id": "vpc-0a813ce9b13b8716d"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alphanet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:229854522243:subnet/subnet-05ab37ae7f3935701",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-05ab37ae7f3935701",
            "map_public_ip_on_launch": false,
            "owner_id": "229854522243",
            "tags": {
              "Name": "mysql"
            },
            "vpc_id": "vpc-0a813ce9b13b8716d"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:229854522243:vpc/vpc-0a813ce9b13b8716d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0db2efcee8d93d78c",
            "default_route_table_id": "rtb-041dff69c210293d9",
            "default_security_group_id": "sg-0d6d64ca8432e7b3a",
            "dhcp_options_id": "dopt-bfe01ad4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a813ce9b13b8716d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-041dff69c210293d9",
            "owner_id": "229854522243",
            "tags": {
              "Name": "vpc1"
            }
          }
        }
      ]
    }
  ]
}